# libdave.py

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  example.cpp  example.pyi  helloworld.cpp  noxfile.py  pyproject.toml  test.py
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/prepare-vcpkg/: action.yml
.github/workflows/: wheels.yml
docs/: CONTRIBUTING.md  conf.py  index.rst  reference.rst
libdave.py/: python_bindings.cpp
scripts/: setup-vcpkg.sh
src/: binding_core.hpp  dave.cpp  decryptor.cpp  encryptor.cpp  libdave_py.cpp  logging.h  session.cpp  signature_key_pair.cpp  signature_key_pair.hpp  utils.hpp
src/dave/: __init__.py  __init__.pyi  _dave_impl.pyi
src/libdave_py/: __init__.py
