cmake_minimum_required(VERSION 3.18)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

# Warn if the user invokes CMake directly
if (NOT SKBUILD)
  message(WARNING "\
  This CMake file is meant to be executed using 'scikit-build-core'.
  Running it directly will almost certainly not produce the desired
  result. If you are a user trying to install this package, use the
  command below, which will install all necessary build dependencies,
  compile the package in an isolated environment, and then install it.
  =====================================================================
   $ pip install .
  =====================================================================
  If you are a software developer contributing to this package,
  follow the instructions in the README instead to set up a more
  developer-friendly build environment.")
endif()


# (somewhat) configurable
set(
    LIBDAVE_CRYPTO "openssl_3"
    CACHE STRING "which crypto library to use, one of 'openssl_3', 'openssl_1.1', 'boringssl'"
)

# General build environment/toolchain setup
set(LIBDAVE_SRC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/libdave/cpp)

set(CMAKE_TOOLCHAIN_FILE "${LIBDAVE_SRC_PATH}/vcpkg/scripts/buildsystems/vcpkg.cmake" CACHE STRING "")
set(VCPKG_MANIFEST_DIR "${LIBDAVE_SRC_PATH}/vcpkg-alts/${LIBDAVE_CRYPTO}" CACHE STRING "")


# FIXME: raise FATAL_ERROR if building for 32 bit platform (including armv8l)

# Architecture-specific ~~hacks~~ target specification
if (WIN32)
    if (CMAKE_GENERATOR_PLATFORM STREQUAL "x64")
        set(VCPKG_TARGET_TRIPLET "x64-windows-static-md")
    elseif (CMAKE_GENERATOR_PLATFORM STREQUAL "ARM64")
        set(VCPKG_TARGET_TRIPLET "arm64-windows-static-md")
    else()
        message(FATAL_ERROR "unexpected platform: ${CMAKE_GENERATOR_PLATFORM}")
    endif()
endif()

project(dave LANGUAGES CXX)


# Set up python/nanobind (see also https://nanobind.readthedocs.io/en/latest/building.html)
find_package(Python REQUIRED COMPONENTS Interpreter Development.Module)

execute_process(
  COMMAND "${Python_EXECUTABLE}" -m nanobind --cmake_dir
  OUTPUT_STRIP_TRAILING_WHITESPACE OUTPUT_VARIABLE nanobind_ROOT)
find_package(nanobind CONFIG REQUIRED)

nanobind_add_module(
    _dave_impl
    src/dave.cpp
    src/decryptor.cpp
    src/encryptor.cpp
    src/session.cpp
    src/signature_key_pair.cpp
)

# Generate typing stub, additionally storing it in src directory for type hints during development.
# If we ever add other dependencies, this will have to be gated by if(SKBUILD)
set(STUB_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/src/dave/_dave_impl.pyi")
nanobind_add_stub(
    dave_stub
    MODULE _dave_impl
    OUTPUT ${STUB_OUTPUT_PATH}
    PYTHON_PATH $<TARGET_FILE_DIR:_dave_impl>
    DEPENDS _dave_impl
)


# Link libdave
set(INSTALL_VCPKG_LICENSES ON)
add_subdirectory(${LIBDAVE_SRC_PATH})

target_include_directories(_dave_impl PRIVATE "${LIBDAVE_SRC_PATH}/src")
target_link_libraries(_dave_impl PRIVATE libdave)

# Install library and stub file in wheel
install(TARGETS _dave_impl LIBRARY DESTINATION dave)
install(FILES ${STUB_OUTPUT_PATH} DESTINATION dave)
