# SPDX-License-Identifier: MIT

[project]
name = "libdave.py"
version = "0.1.0a"
description = "Python bindings for the libdave package."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Disnake Development" }]

[dependency-groups]
dev = [
  { include-group = "nox" },
  { include-group = "tools" },
  { include-group = "typing" },
]
nox = [
  "nox==2025.5.1",
]
tools = [
  "poethepoet>=0.30.0",
  "prek~=0.2.1",
  "ruff==0.13.0",
]
typing = [
  "pyright==1.1.405",
]

[build-system]
requires = ["nanobind>=2.9.2", "scikit-build-core>=0.11.0"]
build-backend = "scikit_build_core.build"

[tool.poe.tasks]
lint = { cmd = "nox -Rs lint --", help = "Check all files for linting errors" }
pyright = { cmd = "nox -Rs pyright --", help = "Run pyright" }

[tool.pyright]
typeCheckingMode = "strict"
include = [
  "src/",
  "*.py",
]


[tool.ruff]
line-length = 100
extend-exclude = [
  "src/dave/_dave_impl.pyi",
  "libdave/",
  "nanobind/",
]

[tool.ruff.lint]
future-annotations = true
select = ["ALL"]
unfixable = ["ERA001"]
ignore = [
  # flake8-commas
  "COM812",  # mostly managed by the formatter
  # flake8-todos
  "TD",  # similar to flake8-fixme, though they may conflict
  # pydocstyle
  "D",
  # flake8-errmsg
  "EM",
  # tryceratops
  "TRY003",  # long error messages
  #
  "ERA",
  "PLR2004",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true


[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "src/**/*.{h,c,hpp,cpp}" },
  { file = "CMakeLists.txt" },
]

[tool.uv.config-settings]
"editable.rebuild" = "true"


[tool.scikit-build]
minimum-version = "build-system.requires"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"
# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
wheel.packages = ["src/dave"]
cmake.build-type = "Release"
cmake.define = { BUILD_SHARED_LIBS = "OFF" }


[tool.cibuildwheel]
build = [
  "cp311-win_amd64",
  "cp311-win_arm64",
  "cp311-macosx_*",
  "cp311-manylinux_*",
  "cp311-musllinux_*",
]
build-verbosity = 1
environment-pass = ["VCPKG_BINARY_SOURCES", "CI"]

# - see https://learn.microsoft.com/en-us/vcpkg/concepts/supported-hosts#dependencies
# - perl-IPC-Cmd is needed to build openssl
[tool.cibuildwheel.linux]
before-all = "dnf install -y git curl zip unzip pkgconfig nasm golang perl-IPC-Cmd"

[tool.cibuildwheel.macos]
before-all = "brew install zip unzip curl pkgconfig nasm go"

[[tool.cibuildwheel.overrides]]
# manylinux uses dnf/yum (because almalinux), musllinux (obviously) does not
select = ["*-musllinux_*"]
before-all = [
  "apk add git curl zip unzip pkgconfig nasm go",
  # redownload vcpkg binary for musllinux
  "./libdave/cpp/vcpkg/bootstrap-vcpkg.sh",
]

# Needed for full C++17 support on macOS
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
